changed overflow to auto to fix scroll bars on some displays

--- a/src/App.css
+++ b/src/App.css
@@ -125,7 +125,7 @@ button {
   width: 25%;
   height: 100%;
   display: flex;
-  overflow: scroll;
+  overflow: auto;
   padding-left: 2px;
 }
 
@@ -149,7 +149,7 @@ button {
   width: 50%;
   height: 100%;
   display: flex;
-  overflow: scroll;
+  overflow: auto;
   padding-left: 2px;
 }
 
@@ -180,7 +180,7 @@ button {
   width: 25%;
   height: 100%;
   display: flex;
-  overflow: scroll;
+  overflow: auto;
   padding-left: 2px;
 }
 
